--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "es6",
     "declaration": true,
+    "esModuleInterop": true,
     "outDir": "./dist",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
@@ -12,6 +13,7 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "__tests__"
   ]
 }
