--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "preset": "ts-jest",
     "modulePathIgnorePatterns": [
       "__tests__/config"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "dependencies": {
     "bs58check": "^2.1.2",
     "buffer": "^5.6.0",
     "crypto-js": "^4.0.0",
+    "elliptic": "^6.5.3",
     "lodash": "^4.17.19",
     "path": "^0.12.7",
     "secure-random": "^1.1.2"
