--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
     "buffer": "^5.6.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.3",
     "lodash": "^4.17.19",
     "path": "^0.12.7",
-    "secure-random": "^1.1.2"
+    "secure-random": "^1.1.2",
+    "sha256": "^0.2.0"
   }
 }
